--- a/content/ouders_en_kinderen/ouderbegeleiding.qmd
+++ b/content/ouders_en_kinderen/ouderbegeleiding.qmd
@@ -1,9 +1,8 @@
----
-title: "Ouderbegeleiding"
-toc: false
----
+## Ouderbegeleiding
 
-![](../../www/images/DSCF0341.jpg){fig-alt="Ouder" width="200px"}
+<div style="float: right; margin-left: 15px;">
+  ![](../../www/images/DSCF0341.jpg){fig-alt="Ouder" width=150px}
+</div>
 
 De Begaafden Wijzer kan u antwoord geven op vragen rondom begeleiding op school, onderwijsaanpassing in de klas, ondersteuning op zelfinzicht allemaal vanuit de onderwijsbehoefte van uw begaafde kind en uw specifieke situatie.
 
