changing the structure of the directory, adding projects files and algemene voorwaarden, updating css when phone

--- a/content/index.qmd
+++ b/content/index.qmd
@@ -2,7 +2,7 @@
 toc: false
 format: 
   html: 
-    include-in-header: intro.html
+    include-in-header: ./intro.html
     sidebar: false
     anchor-sections: false
 ---
