--- a/content/scholen/scholen.qmd
+++ b/content/scholen/scholen.qmd
@@ -6,7 +6,7 @@ In overleg met de individuele scholen is het mogelijk om een maatwerktraject uit
 
 Dergelijke trajecten hebben al bij veel scholen geleid tot onderwijsaanpassingen voor meer- en hoogbegaafde kinderen en het professionaliseren van het team en het scholen van de specialisten HB op des betreffende scholen.
 
-### Professionalisering door Workshops op thema:
+### Professionalisering door Workshops op thema
 
 Voor kleinere thema’s is het ook mogelijk om professionalisering in de vorm van een Workshop te regelen, te denken valt dan aan:
 
