--- a/content/hoogbegaafdheid/index.qmd
+++ b/content/hoogbegaafdheid/index.qmd
@@ -3,9 +3,7 @@ title: "(Hoog)begaafden in de klas ?? ……. en nu ??"
 ---
 
 ::: {.video-container style="float: left; margin-right: 10px;"}
-<iframe width="550" height="300" src="https://www.youtube.com/embed/yyXiNKgpRQc?rel=0" frameborder="0" allowfullscreen>
-
-</iframe>
+<iframe width="550" height="300" src="https://www.youtube.com/embed/yyXiNKgpRQc?rel=0" frameborder="0" allowfullscreen></iframe>
 :::
 
 Een (hoog)begaafde leerling is niet altijd die zelfstandige leerling, die meedoet met de klas en hoge cijfers haalt, daarnaast op schaken zit, een muziekinstrument bespeelt, in teamverband een sport doet en daarnaast nog alle dagen tijd vindt om boeken te lezen. Potentieel (hoog)begaafde volwassenen worden als kind met een hoog potentieel geboren, maar de ontwikkeling tot een evenwichtige goed presterende leerling is afhankelijk van een heleboel factoren in de omgeving van de leerling en in de leerling zelf. De aandacht voor deze groep is de laatste jaren gelukkig groter geworden en de kennis en ervaring op het gebied van de juiste begeleiding neemt toe.
