adding the project page to the main page

--- a/projecten/index.qmd
+++ b/projecten/index.qmd
@@ -3,7 +3,7 @@ title: "Projecten"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: grid
   fields: [image, title, description]
   image-align: left
 ---
