--- a/content/index.qmd
+++ b/content/index.qmd
@@ -5,8 +5,32 @@ format:
     include-in-header: ./intro.html
     sidebar: false
     anchor-sections: false
+listing:
+  - id: landing-projects
+    contents: ../projecten/posts/*.qmd
+    type: default
+    max-items: 3
+    sort:
+      - "date desc"
 ---
 
+::: {.content-container}
+::: {.listing-block}
+<div style="text-align: center;">
 Een hoogbegaafde volwassene is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens, intens levend. Hij of zij schept plezier in creëren.
 
 :   (Maud Kooijman-van Tiel, 2008)
+</div>
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+
+### [Projecten](../projecten/index.qmd)
+
+::: {#landing-projects}
+:::
+
+:::
+:::
