--- a/projecten/posts/pret.qmd
+++ b/projecten/posts/pret.qmd
@@ -9,4 +9,4 @@ In het najaar van 2015 is De Begaafden Wijzer samen met 3 basisscholen en een ho
 
 Elke dinsdagavond, in de aula van de Terp, wordt er door ongeveer 20 kinderen met veel plezier gebouwd en geprogrammeerd met activiteiten met Scratch, Lego-we-do, Websites maken en Lego Mindstorms, zie ook de [Facebook-pagina](https://www.facebook.com/Stichting-PReT-1613161255614139/?ref=aymt_homepage_panel) van de stichting in oprichting.
 
-Zie de [website](/www/Programma-2018-2019.pdf) voor meer informatie. 
+Zie de [website](www.pretweesp.nl) voor meer informatie.
