verwijderen 2 projecten en tekstuele veranderingen en nieuwe voor foto

--- a/content/contact/contact.qmd
+++ b/content/contact/contact.qmd
@@ -1,8 +1,10 @@
 ## Contact
 
-📍&nbsp; [Korte Stammerdijk 18, Weesp](https://maps.app.goo.gl/hTRz12Uv5w4RFpuU9) <br>
+Aangezien ik vaak werkzaam ben op scholen met kinderen, leerkrachten en/of ouders, ben ik het beste bereikbaar via [e-mail](mailto:debegaafdenwijzer@ziggo.nl). Emails worden, indien mogelijk, binnen drie dagen beantwoord.
+
 📞&nbsp; [+31 622842667](tel:+3622842667) <br>
 📧 &nbsp; [debegaafdenwijzer@ziggo.nl](mailto:debegaafdenwijzer@ziggo.nl) <br>
 🏢 &nbsp; [KVK# 32142215](https://www.kvk.nl/bestellen/#/32142215000005400449?origin=search)
 
-Aangezien ik vaak werkzaam ben op scholen met kinderen, leerkrachten en/of ouders, ben ik het beste bereikbaar via [e-mail](mailto:debegaafdenwijzer@ziggo.nl). Emails worden, indien mogelijk, binnen drie dagen beantwoord.
+**Bezoekadres:**
+📍&nbsp; [Korte Stammerdijk 18, 1382 BL Weesp](https://maps.app.goo.gl/hTRz12Uv5w4RFpuU9) <br>
