--- a/content/contact/contact.qmd
+++ b/content/contact/contact.qmd
@@ -6,5 +6,5 @@ Aangezien ik vaak werkzaam ben op scholen met kinderen, leerkrachten en/of ouder
 📧 &nbsp; [debegaafdenwijzer@ziggo.nl](mailto:debegaafdenwijzer@ziggo.nl) <br>
 🏢 &nbsp; [KVK# 32142215](https://www.kvk.nl/bestellen/#/32142215000005400449?origin=search)
 
-**Bezoekadres:**
+**Bezoekadres:** <br> 
 📍&nbsp; [Korte Stammerdijk 18, 1382 BL Weesp](https://maps.app.goo.gl/hTRz12Uv5w4RFpuU9) <br>
