tekstuele aanpassingen fase 1

--- a/content/begaafden_wijzer/visie.qmd
+++ b/content/begaafden_wijzer/visie.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Visie"
+title: "Doelgroepen"
 toc: false
 ---
 
@@ -9,12 +9,13 @@ toc: false
 
 "De Begaafden Wijzer" heeft als doel ouders en scholen te helpen bij het ontwikkeling en begeleiden van (hoog)begaafde leerlingen.
 
-1. **Het eerste uitgangspunt** is het (hoog)begaafde kind zelf; wat zijn zijn/haar mogelijkheden, zijn/haar interesses en waar loopt hij/zij in het leven tegenaan.
+1. **De eerste doelgroep** is het (hoog)begaafde kind zelf; wat zijn zijn/haar mogelijkheden, zijn/haar interesses en waar loopt hij/zij in het leven tegenaan.
 
-2. **Het tweede uitgangspunt** is de school; wat vindt de school belangrijk en welke mogelijkheden zijn er binnen de school.
+2. **De tweede doelgroep** is de school; wat vindt de school belangrijk en welke mogelijkheden heeft een school aan onderwijsaanpassingen voor hoogebgaafde kinderen en past dit bij een specifieke leerling. 
 
-3. **Het derde uitgangspunt** is de omgeving van de leerling thuis, ouders en vrienden, welke mogelijkheden zijn daar om de leerling een goede ontwikkeling te geven.
-Pas als deze drie op elkaar zijn afgestemd krijgt een (hoog)intelligent kind een kans om een (hoog)begaafde leerling te worden.
+3. **De derde doelgroep** is de omgeving van de leerling thuis, ouders en vrienden, welke mogelijkheden zijn daar om het kind/de jongere te ondersteunen bij zijn of haar ontwikkeling.
+
+Pas als deze drie op elkaar zijn afgestemd krijgt een (hoog)intelligent kind/jongere een kans zich optimaal te kunnen ontwikkelen op cognitief, sociaal en persoonlijk gebied.
 
 De opdrachtgevers van ‘De Begaafden Wijzer’ bestaan zowel uit individuele ouders als uit scholen, gemeenten en stichtingsbesturen, tevens is er een breed netwerk met andere instellingen en zorgverleners op het gebied van de begeleiding van (hoog)begaafde leerlingen.
 
