--- a/content/begaafden_wijzer/index.qmd
+++ b/content/begaafden_wijzer/index.qmd
@@ -1,16 +1,14 @@
 ---
-title: "Visie op hoogebegaafdheid en neurodiversiteit"
+title: "Visie op hoogbegaafdheid en neurodiversiteit"
 ---
-De Begaafden Wijzer werkt vanuit een aantal verschillende benaderingen op hoogebegaafdheid en neurodiversiteit. 
+De Begaafden Wijzer werkt vanuit een aantal verschillende benaderingen op hoogbegaafdheid en neurodiversiteit. 
 Binnen het Delphi-model is hoogbegaafdheid gedefinieerd als: 
-“Een hoogbegaafde is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens, intens levend. Hij of zij schept plezier in creëren.” zie ook mijn homepagina. De Begaafden Wijzer werkt met kinderen en jongeren, die nog niet in staat zijn om hun gehele potentieel om te zetten naar prestaties. Het doel van de begeleiding van De Begaafden WIjzer is om de kinderen te ondersteunen bij de ontwikkeling naar een hoogbegaafde volwassene, die instaat is om zijn potentieel om te zetten tot een waardevol en zonvol leven, waarbij balans is tussen prestaties op cognitief vlak, fijne & rijke sociale relaties en geluk & welbevinden op persoonlijk vlak.
+“Een hoogbegaafde is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens, intens levend. Hij of zij schept plezier in creëren.” zie ook mijn homepagina. De Begaafden Wijzer werkt met kinderen en jongeren, die nog niet in staat zijn om hun gehele potentieel om te zetten naar prestaties. Het doel van de begeleiding van De Begaafden WIjzer is om de kinderen te ondersteunen bij de ontwikkeling naar een hoogbegaafde volwassene, die instaat is om zijn potentieel om te zetten tot een waardevol en zinvol leven, waarbij balans is tussen prestaties op cognitief vlak, fijne & rijke sociale relaties en geluk & welbevinden op persoonlijk vlak.
 In het model van Sternberg waar onderscheid gemaakt wordt tussen de analytische, creatieve en praktische intelligentie, zit een overzichtelijke drie-deling. Deze driedeling is in de praktijk van begeleiding en onderwijs een fijn houvast, waarbij ook hierin weer grote individuele verschillen te vinden zijn. 
 
-Afbeelding van succesvolle intelligentie en link naar filmpje op youtube
+Afbeelding van succesvolle intelligentie en link naar filmpje op YouTube
 
-In het "Meer factioren model van hoogbegaafdheid van Mönks", wordt nadrukkelijk gekeken naar de omgevingen waarin mensen zich bevinden, afhnakelijk van de context kan een kind/jongere zich in meer of mindere mate ontwikkelen. Van belang voor de ontwikkeling van een persoon is om te streven naar fijne begripvolle ondersteunende omgevingen. De Begaafden Wijzer wil zich als spil inzetten voor de nauwe samenwerking tussen de leerling, de ouders en de school om te komen tot een optimale ontwikkeling voor de (hoog)begaafde leerling.
+In het "Meer factoren model van hoogbegaafdheid van Mönks", wordt nadrukkelijk gekeken naar de omgevingen waarin mensen zich bevinden, afhankelijk van de context kan een kind/jongere zich in meer of mindere mate ontwikkelen. Van belang voor de ontwikkeling van een persoon is om te streven naar fijne begripvolle ondersteunende omgevingen. De Begaafden Wijzer wil zich als spil inzetten voor de nauwe samenwerking tussen de leerling, de ouders en de school om te komen tot een optimale ontwikkeling voor de (hoog)begaafde leerling.
 ![](../../www/images/samenhang.gif)
 
 > Naar ‘Meer-factoren-model van hoogbegaafdheid (Monks, 1985, revisie 1988)
-
-
