--- a/begaafden_wijzer/index.qmd
+++ b/begaafden_wijzer/index.qmd
@@ -9,6 +9,6 @@ In het model van Sternberg waar onderscheid gemaakt wordt tussen de analytische,
 Afbeelding van succesvolle intelligentie en link naar filmpje op YouTube
 
 In het "Meer factoren model van hoogbegaafdheid van Mönks", wordt nadrukkelijk gekeken naar de omgevingen waarin mensen zich bevinden, afhankelijk van de context kan een kind/jongere zich in meer of mindere mate ontwikkelen. Van belang voor de ontwikkeling van een persoon is om te streven naar fijne begripvolle ondersteunende omgevingen. De Begaafden Wijzer wil zich als spil inzetten voor de nauwe samenwerking tussen de leerling, de ouders en de school om te komen tot een optimale ontwikkeling voor de (hoog)begaafde leerling.
-![](../www/images/samenhang.gif)
+![](/www/images/samenhang.gif)
 
 > Naar ‘Meer-factoren-model van hoogbegaafdheid (Monks, 1985, revisie 1988)
