full page page, html features in the homepage

--- a/contact/index.qmd
+++ b/contact/index.qmd
@@ -2,7 +2,7 @@
 title: "Marijke Schekkerman"
 about: 
     template: trestles
-    image: /www/images/marijke.jpg
+    image: ../www/images/marijke.jpg
     image-shape: round
     image-width: 20em
     links:
